[package]
name = "ids-matrix"
version = "0.1.0"
authors = ["realaravinth <aravinth7820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json"]}
tokio = { version = "0.2", features = ["full"] }
