[package]
name = "ids-matrix"
version = "0.2.0"
authors = ["realaravinth <aravinth7820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
openssl = { version = "0.10.34", features = ["vendored"]}
reqwest = {version = "0.11.3", features = ["json", "rustls-tls", "default-tls", "native-tls"]}
tokio = {version = "1.17", features= ["rt-multi-thread", "macros"]}
